<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_tutorials</name>
  <version>0.0.0</version>
  <description>The ed_tutorials package</description>

  <maintainer email="amigo@todo.todo">amigo</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ed</build_depend>
  <build_depend>ed_gui_server</build_depend>
  <build_depend>ed_localization</build_depend>
  <build_depend>ed_navigation</build_depend>
  <build_depend>ed_object_models</build_depend>
  <build_depend>ed_perception</build_depend>
  <build_depend>ed_perception_models</build_depend>
  <build_depend>ed_rviz_plugins</build_depend>
  <build_depend>ed_sensor_integration</build_depend>

  <exec_depend>ed</exec_depend>
  <exec_depend>ed_gui_server</exec_depend>
  <exec_depend>ed_localization</exec_depend>
  <exec_depend>ed_navigation</exec_depend>
  <exec_depend>ed_object_models</exec_depend>
  <exec_depend>ed_perception</exec_depend>
  <exec_depend>ed_perception_models</exec_depend>
  <exec_depend>ed_rviz_plugins</exec_depend>
  <exec_depend>ed_sensor_integration</exec_depend>

</package>
